Rejustando estructura de gastos para poder facilitar la importacion de datos

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,4 @@ gunicorn==19.1
 Fabric==1.6.1
 django-autoslug
 pixelfields_smart_selects
+-e git://github.com/jakewins/django-money.git#egg=django-money
